# SCST_simple_chat_server_thenaserov

./: CMakeLists.txt  README.md  main.cpp  server.cpp  server.h
